feat: basic notification system
